--- a/user_rank_page.html
+++ b/user_rank_page.html
@@ -90,8 +90,60 @@
         <img src="../resources/logo.png" width="30%" height="30%" margin="30px;">
       </div>
       <div id="searchBar" style='display:inline; margin-left: 30px;'>
-        <input type="text" id="search" placeholder="검색어 입력">
+        <input type="text" id="search" placeholder="Search...">
         <button type="button" class="btn btn-info" id="searchButton">Search</button>
+        <script type="text/javascript">
+          $("#searchButton").click(function() {
+            if ($("#search").val() === "") {
+              alert("검색어를 입력해 주세요.");
+            } else {
+              ajaxSearch($("#search").val());
+            }
+          })
+
+          function ajaxSearch(keyword) {
+            $.ajax({
+              type: 'GET',
+              url: "http://35.234.3.182:9009/api/v1.0/search/news/"+keyword,
+              beforeSend: function(xhr) {
+                xhr.setRequestHeader("Authorization", "Basic " + btoa("minsangkim" + ":" + "1234"));
+              },
+              data: {},
+              success: function(data) {
+                tempdata = data;
+                var init = 0;
+                console.log();
+                $("#articles").empty();
+                for (var i = 0; i < data.length; i++) {
+                  if (tempdata.news[i].title !== undefined) {
+                    init = i;
+                    break;
+                  }
+                }
+                //$("#articles").append("<img src = '../resources/goeun.jpg' height = 100px; width = 200px;></img>");
+                for (var i = init; i < init + 7; i++) {
+                  var tempTitle = tempdata.news[i].title;
+                  var tempAuthor = tempdata.news[i].author;
+                  var tempStar = tempdata.news[i].starcount;
+                  var tempField = tempdata.news[i].field;
+                  var tempAsso = tempdata.news[i].associated_reply;
+                  var news_id = tempdata.news[i].id;
+                  var url = "news_view.html?news_id=" + news_id;
+                  var space = " ";
+                  $("#articles").append("</br><img src = '../resources/news.jpg' height = 100px; width = 200px;></img>");
+                  $("#articles").append("<span><a href = " + url + ">" + space + tempTitle + space);
+                  $("#articles").append("</a></br><img src = '../resources/user.jpg' width = 15px; height = 15px;></img>" + space + tempAuthor + space);
+                  $("#articles").append("<img src = '../resources/star.jpg' width = 15px; height = 15px;></img>" + space + tempStar + space);
+                  $("#articles").append("<img src = '../resources/agree.jpg' width = 15px; height = 15px;></img></span>" + space + tempAsso + "</br><hr>");
+                }
+
+              },
+              error: function() {
+                console.log("article error!");
+              }
+            })
+          }
+        </script>
       </div>
       <div id="log" style='display:inline; margin-left: 10px;'>
         <input class="log" id="id" type="text" placeholder="id">
